# ROBOTICA_PROGRAMMAZIONE

ex3/: Readme.md  Verification.m
ex3/fanuc_description/: CMakeLists.txt  package.xml
ex3/fanuc_description/robot/: fanuc.urdf
ex3/fanuc_moveit_config/: package.xml
ex3/fanuc_moveit_config/config/: fake_controllers.yaml  fanuc.srdf
ex3/fanuc_moveit_config/launch/: demo.launch  demo_gazebo.launch  moveit.rviz
ex3/tf_parser/: CMakeLists.txt  package.xml
ex3/tf_parser/src/: tf_parser.cpp
ex3/urdf_tutorial/rviz/: urdf.rviz
ex4/: Readme.md
ex4/kinematics_action/: CMakeLists.txt  package.xml
ex4/kinematics_action/include/kinematics_action/: inverse_kinematics_action.h
ex4/kinematics_action/launch/: ik_solver.launch
ex4/kinematics_action/src/: ik_client.cpp  ik_server.cpp  inverse_kinematics_action.cpp
ex4/kinematics_action_msgs/: CMakeLists.txt  package.xml
ex4/kinematics_action_msgs/action/: GetIKSolution.action
ex4/kinematics_service/: CMakeLists.txt  package.xml
ex4/kinematics_service/launch/: fk_solver.launch
ex4/kinematics_service/src/: fk_client.cpp  fk_server.cpp
ex4/kinematics_service_msgs/: CMakeLists.txt  package.xml
ex4/kinematics_service_msgs/srv/: GetFKSolution.srv
ex5/circular_planning/: CMakeLists.txt  Readme.md  package.xml
ex5/circular_planning/data/: fanuc_circular.traj  fanuc_circular_old.traj
ex5/circular_planning/launch/: planner.launch
ex5/circular_planning/src/: circular_traj_node.cpp
